[gd_scene load_steps=12 format=3 uid="uid://cnl53v0lrb1mv"]

[ext_resource type="Script" uid="uid://cmgyke5hcxe75" path="res://Assets/UI/Options/Options.gd" id="1_54q7r"]
[ext_resource type="Theme" uid="uid://4vg46hb8hsti" path="res://Assets/UI/Options/restore_button_scene.tres" id="2_8vm80"]
[ext_resource type="PackedScene" uid="uid://gqwcyi21yhlc" path="res://addons/abyss_history_lib/Scene/Notice/hint_button.tscn" id="2_hwb3r"]
[ext_resource type="Texture2D" uid="uid://7yqunet0nhxt" path="res://Resources/Image/UI/Restore.svg" id="2_j0l55"]
[ext_resource type="Script" uid="uid://dhr8xpmf26e8v" path="res://addons/abyss_history_lib/Class/Notice/NoticeInfoClass.gd" id="3_2vebq"]
[ext_resource type="Script" uid="uid://xu6i6p3rtur6" path="res://Assets/UI/Options/keybindings.gd" id="5_ms344"]

[sub_resource type="Resource" id="Resource_wnie8"]
script = ExtResource("3_2vebq")
title = "options.game.data"
type = "Info"
bgColor = Color(0, 0.501961, 1, 1)
content = "options.game.data.disc"
choice = false
yep = "notice.choice.ok"
nope = "notice.choice.no"

[sub_resource type="Resource" id="Resource_hwb3r"]
script = ExtResource("3_2vebq")
title = "options.game.use_sub_threads"
type = "Info"
bgColor = Color(0, 0.501961, 1, 1)
content = "options.game.use_sub_threads.disc"
choice = false
yep = "notice.choice.ok"
nope = "notice.choice.no"

[sub_resource type="Resource" id="Resource_g8qbb"]
script = ExtResource("3_2vebq")
title = "options.game.catch_p_elem_issue"
type = "Info"
bgColor = Color(0, 0.501961, 1, 1)
content = "options.game.catch_p_elem_issue.disc"
choice = false
yep = "notice.choice.ok"
nope = "notice.choice.no"

[sub_resource type="Resource" id="Resource_2vebq"]
script = ExtResource("3_2vebq")
title = "options.game.sdfgi"
type = "Info"
bgColor = Color(0, 0.501961, 1, 1)
content = "options.game.sdfgi.disc"
choice = false
yep = "notice.choice.ok"
nope = "notice.choice.no"

[sub_resource type="Resource" id="Resource_xu8jr"]
script = ExtResource("3_2vebq")
title = "options.control.auto_pickup"
type = "Info"
bgColor = Color(0, 0.501961, 1, 1)
content = "options.control.auto_pickup.disc"
choice = false
yep = "notice.choice.ok"
nope = "notice.choice.no"

[node name="Options" type="TabContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -375.0
offset_right = 600.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("1_54q7r")

[node name="#options_game#" type="TabBar" parent="."]
layout_mode = 2
focus_neighbor_left = NodePath("../#options_control#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_video#")
focus_neighbor_bottom = NodePath("GameSetting/VSplit/Language/language_button")
focus_next = NodePath("../#options_video#")
focus_previous = NodePath("../#options_control#")
metadata/_tab_index = 0

[node name="GameSetting" type="ScrollContainer" parent="#options_game#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplit" type="VBoxContainer" parent="#options_game#/GameSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Language" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="language_text" type="Label" parent="#options_game#/GameSetting/VSplit/Language"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.language"

[node name="language_restore" type="Button" parent="#options_game#/GameSetting/VSplit/Language"]
layout_mode = 2
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="language_button" type="OptionButton" parent="#options_game#/GameSetting/VSplit/Language"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../DataPath/datapath_button")
focus_next = NodePath("../../DataPath/datapath_button")
focus_previous = NodePath("../../DataPath/datapath_button")
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "中文"
popup/item_1/id = 1

[node name="DataPath" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2

[node name="datapath_text" type="Label" parent="#options_game#/GameSetting/VSplit/DataPath"]
layout_mode = 2
text = "options.game.data"

[node name="HintButton" parent="#options_game#/GameSetting/VSplit/DataPath" instance=ExtResource("2_hwb3r")]
layout_mode = 2
text = "不要修改容器大小，这个改成填充会导致按钮太大。"
notice = SubResource("Resource_wnie8")

[node name="datapath_restore" type="Button" parent="#options_game#/GameSetting/VSplit/DataPath"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="datapath_button" type="Button" parent="#options_game#/GameSetting/VSplit/DataPath"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../Language/language_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../Language/language_button")
focus_next = NodePath("../../Language/language_button")
focus_previous = NodePath("../../Language/language_button")

[node name="path_choose" type="FileDialog" parent="#options_game#/GameSetting/VSplit/DataPath/datapath_button"]
gui_embed_subwindows = true
title = "file.open_directory"
initial_position = 2
size = Vector2i(750, 500)
ok_button_text = "Select Current Folder"
cancel_button_text = "button.cancel"
mode_overrides_title = false
file_mode = 2
access = 2
use_native_dialog = true

[node name="UseSubThreads" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ust_text" type="Label" parent="#options_game#/GameSetting/VSplit/UseSubThreads"]
layout_mode = 2
text = "options.game.use_sub_threads"

[node name="HintButton" parent="#options_game#/GameSetting/VSplit/UseSubThreads" instance=ExtResource("2_hwb3r")]
layout_mode = 2
notice = SubResource("Resource_hwb3r")

[node name="ust_restore" type="Button" parent="#options_game#/GameSetting/VSplit/UseSubThreads"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="ust_button" type="CheckBox" parent="#options_game#/GameSetting/VSplit/UseSubThreads"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="DebugOptGroup" type="Button" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2
toggle_mode = true
text = "options.game.debug.group"

[node name="DebugOptContainer" type="VBoxContainer" parent="#options_game#/GameSetting/VSplit"]
layout_mode = 2

[node name="PrintDebugInfo" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit/DebugOptContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="pdi_text" type="Label" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/PrintDebugInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.print_debug_info"

[node name="pdi_restore" type="Button" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/PrintDebugInfo"]
layout_mode = 2
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="pdi_button" type="CheckBox" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/PrintDebugInfo"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="catchPElemIssue" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit/DebugOptContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cpei_text" type="Label" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue"]
layout_mode = 2
text = "options.game.catch_p_elem_issue"

[node name="HintButton" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue" instance=ExtResource("2_hwb3r")]
layout_mode = 2
notice = SubResource("Resource_g8qbb")

[node name="cpei_restore" type="Button" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="cpei_button" type="CheckBox" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="alwaysShowCursor" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit/DebugOptContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="asc_text" type="Label" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/alwaysShowCursor"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.always_show_cursor"

[node name="asc_restore" type="Button" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/alwaysShowCursor"]
layout_mode = 2
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="asc_button" type="CheckBox" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/alwaysShowCursor"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="keyDebugScene" type="HBoxContainer" parent="#options_game#/GameSetting/VSplit/DebugOptContainer"]
layout_mode = 2
metadata/_tab_index = 12

[node name="kds_text" type="Label" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/keyDebugScene"]
layout_mode = 2
text = "options.game.key_debug_scene"

[node name="kds_button" type="Button" parent="#options_game#/GameSetting/VSplit/DebugOptContainer/keyDebugScene"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
text = ">>>"

[node name="#options_video#" type="TabBar" parent="."]
visible = false
layout_direction = 1
layout_mode = 2
focus_neighbor_left = NodePath("../#options_game#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_audio#")
focus_neighbor_bottom = NodePath("VideoSetting/VSpilt/Fullscreen/fullscreen_button")
focus_next = NodePath("../#options_audio#")
focus_previous = NodePath("../#options_game#")
metadata/_tab_index = 1

[node name="VideoSetting" type="ScrollContainer" parent="#options_video#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_video#/VideoSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="HBoxContainer" parent="#options_video#/VideoSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="fullscreen_text" type="Label" parent="#options_video#/VideoSetting/VSpilt/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.fullscreen"

[node name="fullscreen_restore" type="Button" parent="#options_video#/VideoSetting/VSpilt/Fullscreen"]
layout_mode = 2
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="fullscreen_button" type="CheckBox" parent="#options_video#/VideoSetting/VSpilt/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="Scale" type="HBoxContainer" parent="#options_video#/VideoSetting/VSpilt"]
layout_mode = 2

[node name="scale_text" type="Label" parent="#options_video#/VideoSetting/VSpilt/Scale"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.game.scale"

[node name="scale_restore" type="Button" parent="#options_video#/VideoSetting/VSpilt/Scale"]
layout_mode = 2
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="scale_button" type="SpinBox" parent="#options_video#/VideoSetting/VSpilt/Scale"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
focus_neighbor_top = NodePath("../../Fullscreen/fullscreen_button")
focus_previous = NodePath("../../Fullscreen/fullscreen_button")
max_value = 5.0
step = 0.01
value = 1.0

[node name="SDFGI" type="HBoxContainer" parent="#options_video#/VideoSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="sdfgi_text" type="Label" parent="#options_video#/VideoSetting/VSpilt/SDFGI"]
layout_mode = 2
text = "options.game.sdfgi"

[node name="HintButton" parent="#options_video#/VideoSetting/VSpilt/SDFGI" instance=ExtResource("2_hwb3r")]
layout_mode = 2
notice = SubResource("Resource_2vebq")

[node name="sdfgi_restore" type="Button" parent="#options_video#/VideoSetting/VSpilt/SDFGI"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="sdfgi_button" type="CheckBox" parent="#options_video#/VideoSetting/VSpilt/SDFGI"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="#options_audio#" type="TabBar" parent="."]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../#options_video#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_control#")
focus_neighbor_bottom = NodePath("AudioSetting/VSpilt/Master/master_button")
focus_next = NodePath("../#options_control#")
focus_previous = NodePath("../#options_video#")
metadata/_tab_index = 2

[node name="AudioSetting" type="ScrollContainer" parent="#options_audio#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_audio#/AudioSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="master_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Master"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.master"

[node name="master_restore" type="Button" parent="#options_audio#/AudioSetting/VSpilt/Master"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="master_percent" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Master"]
layout_mode = 2
text = "100%"

[node name="master_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/Master"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_bottom = NodePath("../../Music/bgm_button")
focus_next = NodePath("../../Music/bgm_button")
focus_previous = NodePath("../../SFX/sfx_button")
max_value = 1.0
step = 0.01
value = 1.0
allow_greater = true

[node name="Music" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2

[node name="bgm_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.bgm"

[node name="bgm_restore" type="Button" parent="#options_audio#/AudioSetting/VSpilt/Music"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="bgm_percent" type="Label" parent="#options_audio#/AudioSetting/VSpilt/Music"]
layout_mode = 2
text = "100%"

[node name="bgm_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/Music"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Master/master_button")
focus_neighbor_bottom = NodePath("../../SFX/sfx_button")
focus_next = NodePath("../../SFX/sfx_button")
focus_previous = NodePath("../../Master/master_button")
max_value = 1.0
step = 0.01
value = 1.0
allow_greater = true

[node name="SFX" type="HBoxContainer" parent="#options_audio#/AudioSetting/VSpilt"]
layout_mode = 2

[node name="sfx_text" type="Label" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.audio.sfx"

[node name="sfx_restore" type="Button" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="sfx_percent" type="Label" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
layout_mode = 2
text = "100%"

[node name="sfx_button" type="HSlider" parent="#options_audio#/AudioSetting/VSpilt/SFX"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Music/bgm_button")
focus_neighbor_bottom = NodePath("../../Master/master_button")
focus_next = NodePath("../../Master/master_button")
focus_previous = NodePath("../../Music/bgm_button")
max_value = 1.0
step = 0.01
value = 1.0
allow_greater = true

[node name="#options_control#" type="TabBar" parent="."]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../#options_audio#")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../#options_game#")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../#options_game#")
focus_previous = NodePath("../#options_audio#")
metadata/_tab_index = 3

[node name="ControlSetting" type="ScrollContainer" parent="#options_control#"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSpilt" type="VBoxContainer" parent="#options_control#/ControlSetting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MouseSen" type="HBoxContainer" parent="#options_control#/ControlSetting/VSpilt"]
layout_mode = 2

[node name="mouse_text" type="Label" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
layout_mode = 2
size_flags_horizontal = 3
text = "options.control.mouse_sen"

[node name="mouse_restore" type="Button" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="mouse_percent" type="Label" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
layout_mode = 2
text = "40%"

[node name="mouse_button" type="HSlider" parent="#options_control#/ControlSetting/VSpilt/MouseSen"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.4

[node name="AutoPickup" type="HBoxContainer" parent="#options_control#/ControlSetting/VSpilt"]
layout_mode = 2
size_flags_horizontal = 3

[node name="auto_pickup_text" type="Label" parent="#options_control#/ControlSetting/VSpilt/AutoPickup"]
layout_mode = 2
text = "options.control.auto_pickup"

[node name="HintButton" parent="#options_control#/ControlSetting/VSpilt/AutoPickup" instance=ExtResource("2_hwb3r")]
layout_mode = 2
notice = SubResource("Resource_xu8jr")

[node name="auto_pickup_restore" type="Button" parent="#options_control#/ControlSetting/VSpilt/AutoPickup"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_8vm80")
icon = ExtResource("2_j0l55")
flat = true

[node name="auto_pickup_button" type="CheckBox" parent="#options_control#/ControlSetting/VSpilt/AutoPickup"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "
flat = true
clip_text = true

[node name="KeybindingsGroup" type="Button" parent="#options_control#/ControlSetting/VSpilt"]
layout_mode = 2
toggle_mode = true
text = "options.control.keybindings.group"

[node name="KeybindingsContainer" type="VBoxContainer" parent="#options_control#/ControlSetting/VSpilt"]
layout_mode = 2
script = ExtResource("5_ms344")

[connection signal="tab_changed" from="." to="." method="_on_tab_changed"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/Language/language_restore" to="." method="_on_language_restore_pressed"]
[connection signal="item_selected" from="#options_game#/GameSetting/VSplit/Language/language_button" to="." method="_on_language_button_item_selected"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DataPath/datapath_restore" to="." method="_on_datapath_restore_pressed"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DataPath/datapath_button" to="." method="_on_datapath_button_pressed"]
[connection signal="dir_selected" from="#options_game#/GameSetting/VSplit/DataPath/datapath_button/path_choose" to="." method="_on_path_choose_dir_selected"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/UseSubThreads/ust_restore" to="." method="_on_ust_restore_pressed"]
[connection signal="toggled" from="#options_game#/GameSetting/VSplit/UseSubThreads/ust_button" to="." method="_on_ust_button_toggled"]
[connection signal="toggled" from="#options_game#/GameSetting/VSplit/DebugOptGroup" to="." method="_on_debug_opt_group_toggled"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DebugOptContainer/PrintDebugInfo/pdi_restore" to="." method="_on_pdi_restore_pressed"]
[connection signal="toggled" from="#options_game#/GameSetting/VSplit/DebugOptContainer/PrintDebugInfo/pdi_button" to="." method="_on_pdi_button_toggled"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue/cpei_restore" to="." method="_on_cpei_restore_pressed"]
[connection signal="toggled" from="#options_game#/GameSetting/VSplit/DebugOptContainer/catchPElemIssue/cpei_button" to="." method="_on_cpei_button_toggled"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DebugOptContainer/alwaysShowCursor/asc_restore" to="." method="_on_asc_restore_pressed"]
[connection signal="toggled" from="#options_game#/GameSetting/VSplit/DebugOptContainer/alwaysShowCursor/asc_button" to="." method="_on_asc_button_toggled"]
[connection signal="pressed" from="#options_game#/GameSetting/VSplit/DebugOptContainer/keyDebugScene/kds_button" to="." method="_key_debug_scene"]
[connection signal="pressed" from="#options_video#/VideoSetting/VSpilt/Fullscreen/fullscreen_restore" to="." method="_on_fullscreen_restore_pressed"]
[connection signal="toggled" from="#options_video#/VideoSetting/VSpilt/Fullscreen/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="#options_video#/VideoSetting/VSpilt/Scale/scale_restore" to="." method="_on_scale_restore_pressed"]
[connection signal="value_changed" from="#options_video#/VideoSetting/VSpilt/Scale/scale_button" to="." method="_on_scale_button_value_changed"]
[connection signal="pressed" from="#options_video#/VideoSetting/VSpilt/SDFGI/sdfgi_restore" to="." method="_on_sdfgi_restore_pressed"]
[connection signal="toggled" from="#options_video#/VideoSetting/VSpilt/SDFGI/sdfgi_button" to="." method="_on_sdfgi_button_toggled"]
[connection signal="pressed" from="#options_audio#/AudioSetting/VSpilt/Master/master_restore" to="." method="_on_master_restore_pressed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/Master/master_button" to="." method="_on_master_button_value_changed"]
[connection signal="pressed" from="#options_audio#/AudioSetting/VSpilt/Music/bgm_restore" to="." method="_on_bgm_restore_pressed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/Music/bgm_button" to="." method="_on_bgm_button_value_changed"]
[connection signal="pressed" from="#options_audio#/AudioSetting/VSpilt/SFX/sfx_restore" to="." method="_on_sfx_restore_pressed"]
[connection signal="value_changed" from="#options_audio#/AudioSetting/VSpilt/SFX/sfx_button" to="." method="_on_sfx_button_value_changed"]
[connection signal="pressed" from="#options_control#/ControlSetting/VSpilt/MouseSen/mouse_restore" to="." method="_on_mouse_restore_pressed"]
[connection signal="value_changed" from="#options_control#/ControlSetting/VSpilt/MouseSen/mouse_button" to="." method="_on_mouse_button_value_changed"]
[connection signal="pressed" from="#options_control#/ControlSetting/VSpilt/AutoPickup/auto_pickup_restore" to="." method="_on_auto_pickup_restore_pressed"]
[connection signal="toggled" from="#options_control#/ControlSetting/VSpilt/AutoPickup/auto_pickup_button" to="." method="_on_auto_pickup_button_toggled"]
[connection signal="toggled" from="#options_control#/ControlSetting/VSpilt/KeybindingsGroup" to="." method="_on_keybindings_group_toggled"]
